traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:18: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()) return true
    ^Snake:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getDirection()== Direction.WEST){
  ^Snake:26: error: value Ouest is not a member of object plm.universe.Direction
  if (getDirection()== Direction.Ouest){
                                 ^Snake:30: error: value Est is not a member of object plm.universe.Direction
  if (getDirection()== Direction.Est){
                                 ^