traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  while (!positionFinale()){
    pasDeSerpent()
  }
  
}


def positionFinale():Boolean = {
  if (!estFaceMur()) return(false);
  if (getDirection()== Direction.EAST){
    gauche()
    if (estFaceMur()) return true
  }
  if (getDirection()== Direction.WEST){
    droite()
    if (estFaceMur()) return true
  }
}

def pasDeSerpent(){
  while (!estFaceMur){
    avance()
  }
  if (getDirection()== Direction.Ouest){
    droite()
    avance()
    droite()
  if (getDirection()== Direction.Est){
    gauche()
    avance()
    gauche()
}
  }
}